added notices and swagger documentation + userPets
