# swagger.json
@@ -14,7 +14,8 @@
   "tags": [
     { "name": "Auth", "description": "Authorization endpoints" },
     { "name": "Pets", "description": "Pets endpoints" },
-    { "name": "Notices", "description": "Notices endpoints" }
+    { "name": "Notices", "description": "Notices endpoints" },
+    { "name": "Users", "description": "Users endpoints" }
   ],
   "paths": {
     "/api/auth/register": {
@@ -414,13 +415,154 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/getNoticesByCategoryRes"
+                  "$ref": "#/components/schemas/getNoticesByCategoryResponse"
                 }
               }
             }
           },
           "404": {
             "description": "No notices found"
+          }
+        }
+      }
+    },
+    "/api/added": {
+      "get": {
+        "tags": ["Notices"],
+        "security": [{ "Bearer": [] }],
+        "summary": "Get all user`s notices",
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "description": "The token issued to the current user",
+            "required": true,
+            "style": "simple",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "description": "Page number",
+            "type": "number"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "description": "Notices limit in one page",
+            "type": "number"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "User`s notices fetched successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/getUsersNoticeResponse"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Not authorized"
+          },
+          "404": {
+            "description": "No notices found"
+          }
+        }
+      }
+    },
+    "/api/deleted/:noticeId": {
+      "delete": {
+        "tags": ["Notices"],
+        "security": [{ "Bearer": [] }],
+        "summary": "Delete user`s notice by id",
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "description": "The token issued to the current user",
+            "required": true,
+            "style": "simple",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "noticeId",
+            "in": "path",
+            "description": "Notice`s id",
+            "required": true,
+            "style": "simple",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Notice successfully deleted",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/deleteUsersNoticeResponse"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Not authorized"
+          },
+          "404": {
+            "description": "Not found"
+          }
+        }
+      }
+    },
+    "/api/userInfo/": {
+      "get": {
+        "tags": ["Users"],
+        "security": [{ "Bearer": [] }],
+        "summary": "Get all the information about the user and his pets",
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "description": "The token issued to the current user",
+            "required": true,
+            "style": "simple",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+         "responses": {
+          "200": {
+            "description": "Information fetched successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "user": {
+                  "$ref": "#/components/schemas/fullUserInfo"
+                    },
+                    "pets": {
+                      "$ref": "#/components/schemas/usersPetsResponse"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Not authorized"
+          },
+          "404": {
+            "description": "User not found"
           }
         }
       }
@@ -876,7 +1018,7 @@
           }
         }
       },
-      "getNoticesByCategoryRes": {
+      "getNoticesByCategoryResponse": {
         "type": "array",
         "items": {
           "type": "object",
@@ -946,6 +1088,132 @@
               "description": "Some comment in the notice",
               "example": "Gentle and intelligent cat"
             }
+          }
+        }
+      },
+      "getUsersNoticeResponse": {
+        "type": "array",
+        "items": {
+          "type": "object",
+          "properties": {
+            "_id": {
+              "type": "string",
+              "description": "Notice`s id",
+              "example": "64e4b11aae88711dbf14a156"
+            },
+            "category": {
+              "type": "string",
+              "description": "Notice`s category",
+              "example": "in-good-hands"
+            },
+            "title": {
+              "type": "string",
+              "description": "Notice`s title",
+              "example": "The kitten is looking for a home"
+            },
+            "name": {
+              "type": "string",
+              "description": "Pet`s name",
+              "example": "Melissa"
+            },
+            "dateOfBirth": {
+              "type": "string",
+              "description": "Pet`s birthday",
+              "example": "01.01.1991"
+            },
+            "type": {
+              "type": "string",
+              "description": "Pet`s type",
+              "example": "Norwegian forest cat"
+            },
+            "sex": {
+              "type": "string",
+              "description": "Pet`s gender",
+              "example": "female"
+            },
+            "location": {
+              "type": "string",
+              "description": "Pet`s location",
+              "example": "Kyiv"
+            },
+            "favorite": {
+              "type": "array",
+              "description": "User who added notice to favorites",
+              "example": []
+            },
+            "price": {
+              "type": "number",
+              "description": "Pet`s price (for sell category only)",
+              "example": "100"
+            },
+            "owner": {
+              "type": "string",
+              "description": "Id of the user who added the notice",
+              "example": "64e472f86c786ae0f94d3af7"
+            },
+            "avatar": {
+              "type": "string",
+              "description": "Pet`s photo (must be less than 3mb)",
+              "format": "binary"
+            },
+            "comments": {
+              "type": "string",
+              "description": "Some comment in the notice",
+              "example": "Gentle and intelligent cat"
+            }
+          }
+        }
+      },
+      "deleteUsersNoticeResponse": {
+        "type": "object",
+        "properties": {
+          "message": {
+            "type": "string",
+            "description": "Message about deleted notice",
+            "example": "Notice successfully deleted"
+          }
+        }
+      },
+      "usersPetsResponse": {
+        "type": "array",
+        "items": {
+          "type": "object",
+          "properties": {
+            "_id": {
+            "type": "string",
+            "description": "Pet`s id",
+            "example": "64e5af0cc491872a141147a6"
+          },
+            "name": {
+            "type": "string",
+            "description": "Pet`s name",
+            "example": "Melissandra"
+          },
+          "dateOfBirth": {
+            "type": "string",
+            "description": "Pet`s birthday",
+            "example": "03.06.2018"
+          },
+          "type": {
+            "type": "string",
+            "description": "Pet`s type",
+            "example": "Shepard dog"
+          },
+          "comments": {
+            "type": "string",
+            "description": "Comment about your pet",
+            "example": "My fluffy cat"
+          },
+          "owner": {
+            "type": "string",
+            "description": "Pet owner`s ID",
+            "example": "64e8b5e5432cb0d9f8c42190"
+          },
+          "avatar": {
+            "type": "string",
+            "description": "Pet`s photo (must be less than 3mb)",
+            "format": "binary"
+          }
           }
         }
       }
